# Nova

./: $f  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  GEMINI.md  QUICKSTART.md  README.md  activate_nova.sh  api_pattern.md  compatibility_report.md  compose.yaml  docker-compose.yml  mobilenet_v2_dynamic_quant.tflite  new_file.txt  plan.json  pyproject.toml  requirements.txt  run_regression.sh  run_toolbench_nova.py  self_correct.txt  setup.py  system_error.txt  test_adaptive_flow.py  test_adk.txt  test_agent_capabilities.py  test_agent_loop_init.py  test_all_tools.py  test_autonomy.py  test_compatibility_suite.py  test_duo_mode.py  test_dynamic_switching.py  test_gemini_integration.py  test_hallucination_recovery.py  test_identity.py  test_kali_full.py  test_memory.py  test_planner_roles.py  test_plugins_api.py  (+10 more)
.nova_cache/: search_rl_state.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
documentation/: Architecture.md  Project_Overview.md  Test_Report.md  agent_autonomy.md  agentbench_guide.md  api_setup_guide.md  autonomy_and_safety.md  improvement_todo_list.md  keyboard_shortcuts.md  multi_agent_architecture.md  nova_100plus_test_matrix.md  nova_agent_profiles_and_modes.md  nova_agentic_features.md  nova_agentic_overview.md  nova_auto_tools_and_features.md  nova_coding_capabilities.md  nova_comprehensive_capabilities.md  nova_comprehensive_report.md  nova_final_report.md  nova_final_validation_report.md  nova_folder_scaffold_regression.md  nova_global_cli_setup.md  (+24 more)
nova-api/: pyproject.toml
nova-api/nova_api/: main.py
nova-core/: pyproject.toml
nova-core/nova_core/: config.py
nova-core/nova_core/engine/: agent.py
nova-core/nova_core/memory/: memory.py
nova-core/nova_core/models/: ollama.py
nova-core/nova_core/tools/: base.py
nova-tools/: pyproject.toml
nova-tools/nova_tools/standard/: file.py  shell.py  web.py
(+298 files in other folders)
