[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-api"
version = "0.1.0"
description = "API Gateway for Nova v2"
requires-python = ">=3.11"
dependencies = [
    "nova-core",
    "nova-tools",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_api*"]
