[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-tools"
version = "0.1.0"
description = "Tool ecosystem for Nova v2"
requires-python = ">=3.11"
dependencies = [
    "nova-core",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_tools*"]
